<resources>
    <string name="app_name">Food Planner</string>
    <string name="facebook_application_id">865537618084809</string>
    <string name="fb_login_protocol_scheme">fb865537618084809</string>
    <string name="facebook_client_token">9adf81fc4feaeba2e24d21f1c5a88130</string>
    <string name="google_web_client_id">278685732623-4c2se285217nbv33htf8q77cinm56d9r.apps.googleusercontent.com</string>
    <string name="youtube_api_key">AIzaSyBePzWWGpqjupDq5nu5DWFORRTkVt0aHVY</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personalized_recipe_discovery">Personalized Recipe\nDiscovery</string>
    <string name="land_page_description_1">Tell us your food preferences and we will serve you delicious recipes ideas</string>
    <string name="next_btn">NEXT</string>
    <string name="grocery_list">Grocery List For When\nYou Shop</string>
    <string name="land_page_description_2">Take the grocery list from your cart to your nearest grocery store and buy the ingredients.</string>
    <string name="all_your_favourite">All your Favourite Recipes In One Place</string>
    <string name="land_page_description_3">Save time on planning by having your favourite recipes within reach</string>
    <string name="get_started_btn">Get Started</string>
    <string name="app_logo">FOODA</string>
    <string name="shop_ingredients">Shop Ingredients For Any Recipe</string>

    <string name="sign_up_tv">Sign Up</string>
    <string name="save_delicious">Save delicious recipes and get personalized content.</string>
    <string name="email_check_box">I would like to receive recipe inspiration.meal plans,updates,and more!</string>

    <string name="title_home_meal">Featured</string>
    <string name="title_home_search">Search</string>
    <string name="title_home_favourites">Favourites</string>
    <string name="title_home_plan">Plan</string>
    <string name="skip">Skip</string>
    <string name="signup_with_email">Sign up with email</string>
    <string name="slogan">Cook with Confidence</string>
    <string name="search">Search</string>
    <string name="login_tv">Log In</string>
    <string name="welcome_back">Welcome back! you are just a tab away from something delicious.</string>
    <string name="login_btn">Start Cooking!</string>
    <string name="forgot_password">I FORGOT MY PASSWORD</string>
    <string name="password_reset">Password Reset</string>
    <string name="password_text">We have been there.Type in your email and we will send you a reset email.</string>
    <string name="reset_btn">RESET</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="search_by_meal">Search by Meal</string>
    <string name="view_all">View All</string>
    <string name="search_by_area">Search by Area</string>
    <string name="recipe">RECIPE</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="steps_text">"Learn how to make this recipe</string>
    <string name="facebook_login">Facebook</string>
    <string name="google_login">Google</string>
    <string name="loading">Please wait</string>
    <string name="require_auth_to_continue">You must be logged in to access this feature.\nWould you like to login?</string>
    <string name="no_items_found">No items found.</string>
</resources>