<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black_500"
    tools:context=".features.authentication.views.AuthenticationFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.95"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@mipmap/auth_background" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.40"
        android:background="@drawable/fading_edges_bt"
        android:fadingEdgeLength="40dp"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        app:backgroundTint="@color/black_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CapsuleShape" />

    <TextView
        android:id="@+id/app_name_tv"
        style="@style/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_logo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/slogan_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        style="@style/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signup_with_email"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_email_24"
        app:layout_constraintBottom_toTopOf="@+id/login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/CapsuleShape" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_btn"
        style="@style/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/facebook_login"
        android:textColor="@color/com_facebook_primary_button_text_color"
        app:backgroundTint="@color/com_facebook_button_background_color_pressed"
        app:icon="@drawable/ic_facebook_24"
        app:iconTint="@color/com_facebook_primary_button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/signup_btn"
        app:layout_constraintEnd_toStartOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/CapsuleShape" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_btn"
        style="@style/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/google_login"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_google_24"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/facebook_btn"
        app:shapeAppearanceOverlay="@style/CapsuleShape" />

    <TextView
        android:id="@+id/login_tv"
        style="@style/AuthText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="login text"
        app:layout_constraintBottom_toTopOf="@+id/disclaimer_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slogan_tv"
        style="@style/AuthSlogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/slogan"
        app:layout_constraintBottom_toTopOf="@id/facebook_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_tv" />

    <TextView
        android:id="@+id/disclaimer_tv"
        style="@style/AuthText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="disclaimer text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>