<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".features.authenticatuin.views.SignUp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="367dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:boxStrokeColor="@drawable/hint_selector"
            app:errorTextColor="#FF1313"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxBackgroundColor="#CFCBCB"
            app:counterTextColor="@drawable/edit_text_selector"
            app:boxCornerRadiusTopStart="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="367dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#CFCBCB"
            app:counterTextColor="@drawable/edit_text_selector"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxStrokeColor="@drawable/hint_selector"
            app:boxCornerRadiusTopStart="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            android:hint="Email"
            android:textColorHint="@drawable/hint_selector"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="367dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:textColorHint="@drawable/hint_selector"
            app:counterTextColor="@drawable/edit_text_selector"
            app:boxStrokeColor="@drawable/hint_selector"
            app:boxBackgroundColor="#CFCBCB"
            android:textColor="@color/white"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"

            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:helperText="Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="367dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@drawable/hint_selector"
            app:boxBackgroundColor="#CFCBCB"
            app:boxStrokeColor="@drawable/hint_selector"

            app:counterTextColor="@drawable/edit_text_selector"
            app:helperTextEnabled="true"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"


            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" Confirm Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="363dp"
            android:layout_height="49dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:text="@string/save_delicious"
            android:textAlignment="textStart"
            android:textColor="#CFCBCB"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_tv" />

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_tv"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="347dp"
            android:layout_height="71dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="56dp"
            android:text="@string/email_check_box"
            android:textColor="#CFCBCB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>